kubernetes/apps/default/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  hostnames:
    - kguardian.${LIMITED_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
